# jvc

./: .gitignore  Cargo.toml  LICENSE  README.md
.ci/: install.sh
.github/workflows/: create_new_tag.yml  pipeline.yml
src/: config.rs  jvc-init.rs  loglevel.rs  main.rs  provider.rs  version.rs
src/archive/: mod.rs
src/client/: adoptopenjdk_client.rs  azul_client.rs  github_client.rs  mod.rs  package_client.rs
src/commands/: alias.rs  default.rs  env.rs  executor.rs  install.rs  list.rs  mod.rs  package.rs  remove.rs
src/commands/windows/: mod.rs
src/shell/: bash.rs  mod.rs  powershell.rs  shell.rs  windows_cmd.rs  zsh.rs
src/shell/detect/: unix.rs  windows.rs
