[package]
name = "jvc"
version = "0.0.2"
authors = ["Stanciu Neculai <neculai.stanciu@outlook.com>"]
edition = "2018"

[dependencies]
# args parser
structopt = "0.3.21"

# async runtime
tokio = { version = "1.0.2", features = ["full"] }
async-trait = "0.1.42"

# error handling
anyhow = "1.0.38"
thiserror = "1.0.23"
# logging
log = "0.4.13"
env_logger = "0.8.2"
# http client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# ansi colors
colored = "2.0.0"
# json serialization
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
chrono = { version = "0.4.19", features = ["serde"] }
# temp dir
tempdir = "0.3.7"
# Progress bar
indicatif = "0.15.0"
# archive support
tar = "0.4.30"
zip = "0.5.9"
flate2 = "1.0.14"

symlink = "0.1.0"

# common dirs
dirs = "3.0.1"

[target.'cfg(windows)'.dependencies]
csv = "1.1.5"
winreg= "0.8.0"


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
rpath = false
